--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <li>aniaml<ul>
         <li>pet<ul>
-            <li><a href="file:///C:/Users/rohit/OneDrive/Documents/web%20development/HTML-personal%20site/dog.html">Dog</a>
+            <li><a href="dog.html">Dog</a>
             </li>
           </ul>
         </li>
@@ -55,7 +55,7 @@
       Biology
     </li>
     <li>
-      <a href="file:///C:/Users/rohit/OneDrive/Documents/web%20development/HTML-personal%20site/physics.html">Physics</a>
+      <a href="physics.html">Physics</a>
     </li>
     <li>
       chemistry
@@ -135,7 +135,7 @@
   </tr>
 </table>
 
-<a href="C:\Users\rohit\OneDrive\Documents\web development\HTML-personal site\contact me.html"><h1>contact me</h1></a>
+<a href="contact me.html"><h1>contact me</h1></a>
 
 </body>
 
