--- a/contact me.html
+++ b/contact me.html
@@ -5,7 +5,7 @@
     <title> CONTACT ME</title>
   </head>
   <body>
-    <a href="C:\Users\rohit\OneDrive\Documents\web development\HTML-personal site\challenge.html"<h1>CONTACT DETAILS</h1></a>
+    <a href="challenge.html"<h1>CONTACT DETAILS</h1></a>
 
     <P>929/22</P>
     <P>9348373820</P>
