--- a/dog.html
+++ b/dog.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a href="https://en.wikipedia.org/wiki/Dog">dog</a>
-    <a href="file:///C:/Users/rohit/OneDrive/Documents/web%20development/HTML-personal%20site/index.html">back</a>
+    <a href="index.html">back</a>
   </body>
 </html>
